# hypeboard

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  daily-update.yml  deploy-pages.yml
data/history/: AAPL.json  AMC.json  AMD.json  AMZN.json  AVGO.json  BABA.json  COIN.json  DKNG.json  GME.json  HOOD.json  INTC.json  LCID.json  MARA.json  META.json  MSFT.json  MSTR.json  NIO.json  NVDA.json  PLTR.json  PYPL.json  RIOT.json  RIVN.json  SHOP.json  SMCI.json  SNAP.json  SOFI.json  TSLA.json  TSM.json  UBER.json
data/metadata/: meta.json  update-report.md
data/processed/: latest.json
data/raw/seed/: README.md  manifest.json  market_snapshot_2026-07-17.csv  wikipedia_pageviews.csv
docs/: architecture.md  build-verification.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
hypeboard_pipeline.egg-info/: PKG-INFO  SOURCES.txt
pipeline/: __init__.py  logging_config.py  run_pipeline.py
pipeline/config/: __init__.py  score_config.json  universe.json
pipeline/models/: __init__.py  domain.py
pipeline/scoring/: __init__.py  confidence_score.py  hype_score.py  normalization.py
pipeline/sources/: __init__.py  base.py  finra_short_volume.py  market_data.py  social.py  wikipedia.py
pipeline/validation/: __init__.py  data_quality.py  export_schemas.py  validate_output.py
tests/: test_generated_output.py  test_normalization.py  test_scores.py  test_source_resilience.py  test_validation.py
(+82 files in other folders)
