[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "hypeboard-pipeline"
version = "1.0.0"
description = "Public signals of market attention and retail activity"
requires-python = ">=3.12"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["pipeline*"]
